# NarratorX

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  streamlit_app.py
.github/: lint-and-format.yml
.streamlit/: config.toml
src/narratorx/: cli.py  llm.py  ocr.py  test.py  tts.py  utils.py
src/narratorx/prompts/: pydantic_prompt.txt  splitter_system_prompt.txt  splitter_user_prompt.txt  system_prompt.txt  user_prompt.txt
tests/: test_cli.py  test_llm.py  test_ocr.py  test_tts.py  test_utils.py
